internet_gateway.tf
#InternetGateWay creation and attached to VPC creted
resource "aws_internet_gateway" "gw" {
  vpc_id = aws_vpc.main.id

  tags = {
    Name = "My-Internet-Gateway"
  }
}
